<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe</string>
    <string name="blah">Something</string>

    <!-- Buttons -->
    <string name="btn">Button</string>
    <string name="btn_oneplayer">One player</string>
    <string name="btn_twoplayer">Two player</string>
    <string name="btn_play">Play</string>
    <string name="btn_back">Back</string>
    <string name="label_p1">Player 1: </string>
    <string name="label_p2">Player 2: </string>
    <string name="input_p1"> Player 1 </string>
    <string name="input_p2"> Player 2 </string>
    <string name="btn_easy">Easy</string>
    <string name="btn_hard">Hard</string>
    <string name="hello_world">Hello world!</string>
    <string name="TG">The game</string>
    <string name="MM">Main menu</string>
    <string name="MP">Multiplayer</string>
    <string name="turn">Your turn or other displayed here</string>
    <string name="score">0:0</string>
    <string name="difficulty">Choose difficulty</string>
    
   	<string name="winDialog">You\'ve won and Santa is very pleased. Care to play again?</string>
   	<string name="loseDialog">You\'ve lost and now Santa is sad! Want to try to cheer him up?</string>
   	<string name="multplayerWin">wins! Want to play again?</string>
   	<string name="drawDialog">It\'s a draw! Want to play again?</string>

</resources>