<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >
    
    <TextView 
        android:id="@+id/difficulty"
        android:text="@string/difficulty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_easy"
        android:text="@string/btn_easy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"/>
    
    <Button 
       android:id="@+id/btn_hard"
       android:text="@string/btn_hard"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:onClick="onClick" />
		
    <Space
    	    android:layout_width="fill_parent"
       		android:layout_height="280dp"
            android:layout_gravity="fill"/>
    	<Button
    	    android:id="@+id/btn_back"
	        android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:text="@string/btn_back"
     		android:onClick="onClick"
        	android:gravity="center"/>
    	
</LinearLayout>
