<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TG" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <ImageButton 
            android:id="@+id/ib_1"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        <ImageButton 
            android:id="@+id/ib_2"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cockie"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        <ImageButton 
            android:id="@+id/ib_3"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <ImageButton 
        	android:id="@+id/ib_4"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        <ImageButton 
            android:id="@+id/ib_5"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        <ImageButton 
            android:id="@+id/ib_6"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <ImageButton 
            android:id="@+id/ib_7"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        
        <ImageButton 
            android:id="@+id/ib_8"
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
	        android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
        <ImageButton 
            android:id="@+id/ib_9" 
            android:layout_weight=".30"
	        android:layout_height="120dp"
	        android:layout_width="0dp"
            android:src="@drawable/cow4"
            android:contentDescription="@string/btn"
            android:onClick="onClick"
            android:scaleType="fitXY"/>
    </LinearLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/turn" 
        android:gravity="center"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/score" 
        android:gravity="center"/>
    	
    	<Button
    	    android:id="@+id/btn_back"
	        android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
       		android:text="@string/btn_back"
       		android:onClick="onClick"
        	android:gravity="center"/>
    	
</LinearLayout>
